[tool.poetry]
name = "cfnkit"
version = "1.0.0"
description = ""
authors = ["Jacob Neil Taylor <me@jacobtaytlor.id.au>"]
packages = [
    { include = "cfnkit", from = "src" }
]

[tool.poetry.plugins."cfnkit.builder"]
eks = "cfnkit.builders.eks:EksClusterTemplateBuilder"
vpc = "cfnkit.builders.vpc:VpcTemplateBuilder"

[tool.poetry.dependencies]
python = "^3.12"
troposphere = "^4.6.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.1"
isort = "^5.10.1"
pytest-cov = "^5.0.0"
coverage = {extras = ["toml"], version = "^6.4.4"}
flake8 = "^5.0.4"
mock = "^4.0.3"
black = "^22.6.0"
pytest = "^7.1.2"
ipython = "^8.4.0"
types-setuptools = "^65.1.0"
types-mock = "^4.0.15"
Flake8-pyproject = "^1.1.0"
semver = "^2.13.0"
boto3-stubs = {extras = ["ec2", "network-firewall", "networkmanager", "s3"], version = "^1.34.15"}
ruff = "^0.1.11"
mypy = "^1.8.0"
types-tabulate = "^0.9.0.20240106"
deepdiff = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 88
include = '\.pyi?$'

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc.)?abstractmethod",
]
ignore_errors = true

[tool.coverage.html]
directory = "test-reports/coverage_html"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"